vendor/link-section-0.18.3/tests/errors/bad_section.rs
use link_section::section;

#[section(untyped)]
static BAD_SECTION: link_section::TypedSection<u32>;

fn main() {
}
